# poetry-bug-path-alt-sources

./: README.md  pyproject.toml  script.py
my_package/: pyproject.toml
my_package/my_package/: module.py  script.py
